--- a/README
+++ b/README
@@ -5,8 +5,10 @@ eflorenzano.com  =  Eric Florenzano,
  
                     also I use his pagination stuff for now.
                     http://django-pagination.googlecode.com/svn/trunk
+                    (Note: Pagination makes more since to do on the client side.)
 
 git_config = My git Configuration
+
 livecd_txfer_script = Python script for taring up a dir
 
 liveproject = here is my logfile tailer ( jquery stuff) [ I forgot where this got started from ]
@@ -14,6 +16,9 @@ liveproject = here is my logfile tailer ( jquery stuff) [ I forgot where this go
 Books: 
       Python Development With Django: ( Purple book)
          - pastebin = pretty dam clean example. 
+         - photo_gallery = ( 
+         - gallery =
+         - cms ..?? from this book..?
 
       Practical Django Projects ( 2nd ed): ( yellow book)
          - cms: Content Management System Example.
@@ -32,7 +37,9 @@ Books:
 
       Pro Django
 
-      
+- formEFactory = My idea of generating all of the fourms/examples we need for an app.
+- ajax_tut
+- ajax_user_list
 
 - django_topics_db_queries = these came out of reading django's online docs
 - making_queries
@@ -41,15 +48,15 @@ Books:
 - django_celery_demoproject
 
 - django_logtailer = this was the django logtailer app ( which plugs into the admin interface, pretty cool)
-- django_topics_db_queries
-- gallery
 - jeffsite
 - jeffsite_djadmin
+- polling
+- rabbitMQ
 
-photo_gallery
 readit_django_proto
 twisted
 twitterclone
+log_driver_prototype
 xxdiff-subversion
 
 Working on the LDAP Stuff:
@@ -65,6 +72,8 @@ google-code-prettify-read-only
 syntaxhighlighter_3.0.83
 django-mingus
 
+
+
 These are the tool in my home devel box.
 drwxr-xr-x 12 jds jds  4096 2011-10-07 07:37 celery
 drwxr-xr-x  3 jds jds  4096 2010-07-19 09:40 django-ajax-selects-1.1.4
@@ -76,22 +85,3 @@ drwxr-xr-x  6 jds jds  4096 2011-10-04 09:39 django-pagination
 drwxr-xr-x  9 jds jds  4096 2011-10-04 09:34 django-trunk
 drwxr-xr-x  9 jds jds  4096 2011-10-06 23:00 python-ldap
 drwxr-xr-x  2 jds jds  4096 2011-10-04 09:35 toolbox
-
-Ubuntu Installed @ home
-Commit Log for Sat Oct  8 21:40:54 2011
-Installed the following packages:
-python-django-auth-ldap (1.0.5-1)
-
-Commit Log for Fri Oct  7 14:51:18 2011
-Installed the following packages:
-gq (1.3.4-1)
-
-Commit Log for Fri Oct  7 07:40:47 2011
-Installed the following packages:
-erlang-os-mon (1:13.b.3-dfsg-2ubuntu3)
-erlang-snmp (1:13.b.3-dfsg-2ubuntu3)
-rabbitmq-server (2.3.1-1ubuntu1)
-
-Commit Log for Thu Oct  6 23:01:45 2011
-Installed the following packages:
-python-ldap (2.3.11-1ubuntu2)
